--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="소스 파일\250410">
       <UniqueIdentifier>{5a407885-7c16-40b9-a535-9856d197894d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\250415">
+      <UniqueIdentifier>{d816391b-b1e2-4640-a8f9-272ae6b6a1d9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="순차검색.cpp">
@@ -71,6 +74,9 @@
     </ClCompile>
     <ClCompile Include="250410_퀵정렬.cpp">
       <Filter>소스 파일\250410</Filter>
+    </ClCompile>
+    <ClCompile Include="연결리스트.cpp">
+      <Filter>소스 파일\250415</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
