--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -78,5 +78,8 @@
     <ClCompile Include="연결리스트.cpp">
       <Filter>소스 파일\250415</Filter>
     </ClCompile>
+    <ClCompile Include="이중연결리스트.cpp">
+      <Filter>소스 파일\250415</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
